# gpu-programming

./: .gitignore  A3.txt  aaaa2.txt
01/: CMakeLists.txt  histogram.cu  histogram.h  main.cu  readme.txt  util.h
02/: CMakeLists.txt  convolution.cu  convolution.h  denoiser.cu  main.cu  modules.cu  modules.h  readme.txt  train_model.ipynb  util.h
02/model/: weights.pth
